# data-science-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
src/: nn.py
{{cookiecutter.project_name}}/: LICENSE  README.md  pyproject.toml
